# collaborative-photoshop

./: README.md  pyproject.toml  requirements.txt  test_artistic_style.py
agent-tests/: image_generation.py  test.py
image_modifications/: example_usage.py  image_modification.py
image_modifications_test/: image_modification.py
image_modifications_test/test_data/: processed_output.json  raw_output.json
src/collaborative_photoshop/: agent.py  app.py  image_generator.py  image_modifications.py  model.py
src/openai_vivalehack/: agent.py  app.py  app_2.py  image_generator.py  image_modifications.py  model.py  utils.py
src/openai_vivalehack/image_modifications/: image_modification.py
