[project]
name = "collaborative-photoshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Afnan Khan", email = "afnan.khan@davia.ai" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "matplotlib>=3.10.3",
    "openai-agents>=0.0.17",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "python-dotenv>=1.1.0",
    "replicate>=1.0.7",
]

[project.scripts]
collaborative-photoshop = "collaborative_photoshop.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]
